# RLT_test_task

./: .env  .flake8  .gitignore  README.md  main.py  pyproject.toml
src/: app.py  config.py
src/db/: db.py
src/db/models/: __init__.py  payment.py
src/enums/: group_type.py
src/routers/: base.py  payment.py
src/schema/: filter.py  statistic.py
