[tool.poetry]
name = "rlt-test-task"
version = "0.1.0"
description = ""
authors = ["Umbreella <draginvadim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.0.3"
aiogram = "^3.1.1"
beanie = "^1.23.1"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
flake8 = "^6.1.0"
flake8-quotes = "^3.3.2"
flake8-broken-line = "^1.0.0"
flake8-commas = "^2.1.0"
isort = "^5.12.0"


[tool.isort]
multi_line_output = 5
include_trailing_comma = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
